--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "whatsapp-bot (Ethix-MD)",
+  "name": "Draken-bot (Draken-MD)",
   "description": " Whatsapp bot.",
   "keywords": [
     "whatsapp bot"
@@ -40,7 +40,7 @@
     "ALWAYS_ONLINE": {
       "description": "make it true if you want bot to show always online",
       "required": false,
-      "value": ""
+      "value": "true"
     },
     "AUTO_BLOCK": {
       "description": "make it true if you want bot to auto block only 212 numbers",
